part4. pre-training test #1

--- a/fastcampus/summer/Part4. LLaMa pre-train from scratch.ipynb
+++ b/fastcampus/summer/Part4. LLaMa pre-train from scratch.ipynb
@@ -2,25 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading readme: 100%|██████████| 15.6k/15.6k [00:00<00:00, 36.8MB/s]\n",
-      "Downloading data: 100%|██████████| 257M/257M [00:23<00:00, 10.8MB/s] \n",
-      "Downloading data: 100%|██████████| 257M/257M [00:25<00:00, 9.97MB/s] \n",
-      "Downloading data: 100%|██████████| 259M/259M [00:24<00:00, 10.7MB/s] \n",
-      "Downloading data: 100%|██████████| 34.7M/34.7M [00:03<00:00, 10.6MB/s]\n",
-      "Downloading data: 100%|██████████| 30.0M/30.0M [00:02<00:00, 11.3MB/s]\n",
-      "Generating train split: 100%|██████████| 287113/287113 [00:11<00:00, 25316.38 examples/s]\n",
-      "Generating validation split: 100%|██████████| 13368/13368 [00:00<00:00, 21237.44 examples/s]\n",
-      "Generating test split: 100%|██████████| 11490/11490 [00:01<00:00, 6499.37 examples/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "raw_dataset = load_dataset(\"cnn_dailymail\", \"3.0.0\")"
@@ -28,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +34,7 @@
        "})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +54,7 @@
        "\"LONDON, England (Reuters) -- Harry Potter star Daniel Radcliffe gains access to a reported £20 million ($41.1 million) fortune as he turns 18 on Monday, but he insists the money won't cast a spell on \""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +209,7 @@
        "[287113 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,9 +242,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -269,7 +260,7 @@
        "}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +298,7 @@
       "\n",
       "\n",
       "\n",
-      "CPU times: user 55min 50s, sys: 2min 51s, total: 58min 41s\n",
+      "CPU times: user 58min 25s, sys: 2min 51s, total: 1h 1min 16s\n",
       "Wall time: 9min 25s\n"
      ]
     }
@@ -319,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +364,7 @@
        " 'Ġon']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +385,7 @@
        "{'input_ids': [20039, 12, 1444, 527, 10685, 8799, 9, 630, 4047, 11999, 940, 3946, 24258, 13752, 2653, 280, 259, 1243, 818, 2377, 1252, 7382, 8814, 14, 17, 1252, 9, 9072, 359, 306, 7235, 1447, 316, 1519, 12, 486, 306, 7342, 262, 1424, 1536, 571, 4562, 259, 7294, 316], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], 'length': [46]}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +399,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "context_length = 128\n",
+    "def tokenize(batch):\n",
+    "  outputs = tokenizer(\n",
+    "    batch['article'],\n",
+    "    max_length=context_length,\n",
+    "    truncation=True,\n",
+    "    return_overflowing_tokens=True,\n",
+    "    return_length=True\n",
+    "  )\n",
+    "\n",
+    "  input_batch = []\n",
+    "  for length, input_ids in zip(outputs['length'], outputs['input_ids']):\n",
+    "    if length == context_length:\n",
+    "      input_batch.append(input_ids)\n",
+    "  return {\"input_ids\": input_batch}\n"
+   ]
   }
  ],
  "metadata": {
